add new website from server na

--- a/xem-phim-bo/quyen-tu-luong/index.html
+++ b/xem-phim-bo/quyen-tu-luong/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1663,18 +1663,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thu-quan-cua-world-cup" title="Thủ quân của World Cup">
+          <a class="list-top-movie-link" href="/phim-moi/thoi-gian-vang" title="Thời Gian Vàng">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-quan-cua-world-cup-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/golden-time-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thủ quân của World Cup
+             Thời Gian Vàng
             </span>
             <span class="list-top-movie-item-en">
-             Captains of the World
+             Golden Time
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/co-gai-dua-voi-lua" title="Cô Gái Đùa Với Lửa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-dua-voi-lua-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cô Gái Đùa Với Lửa
+            </span>
+            <span class="list-top-movie-item-en">
+             The Girl Who Played with Fire
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1685,18 +1707,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pho-chanh-diet-ta-don-giap-ky-binh" title="Phò Chánh Diệt Tà (Độn Giáp Kỳ Binh)">
+          <a class="list-top-movie-link" href="/phim-moi/benh-vien-tam-than" title="Bệnh Viện Tâm Thần">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pho-chanh-diet-ta-don-giap-ky-binh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/benh-vien-tam-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phò Chánh Diệt Tà (Độn Giáp Kỳ Binh)
+             Bệnh Viện Tâm Thần
             </span>
             <span class="list-top-movie-item-en">
-             Brothers Under The Skin
+             Stonehearst Asylum
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1707,18 +1729,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-thinh-truong-ca" title="Thiên Thịnh Trường Ca">
+          <a class="list-top-movie-link" href="/phim-moi/anh-la-mua-xuan-cua-em" title="Anh là mùa xuân của em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-thinh-truong-ca-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-la-mua-xuan-cua-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiên Thịnh Trường Ca
+             Anh là mùa xuân của em
             </span>
             <span class="list-top-movie-item-en">
-             The Rise of Phoenixes
+             You Are My Spring
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1729,40 +1751,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/long-tham-2" title="Long Thám">
+          <a class="list-top-movie-link" href="/phim-moi/tuoi-tre-a-rap-phan-2" title="Tuổi trẻ Ả Rập (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/long-tham-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoi-tre-a-rap-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Long Thám
+             Tuổi trẻ Ả Rập (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Descendants of The Dragon
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trai-tim-cua-quy" title="Trái Tim Của Quỷ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-tim-cua-quy-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trái Tim Của Quỷ
-            </span>
-            <span class="list-top-movie-item-en">
-             The Devil Inside
+             Takki (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
