add new website from server na

--- a/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
+++ b/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1789,18 +1789,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tau-tuan-trang-mat" title="Chuyến tàu tuần trăng mật">
+          <a class="list-top-movie-link" href="/phim-moi/com-chim" title="Cớm Chìm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tau-tuan-trang-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/com-chim-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyến tàu tuần trăng mật
+             Cớm Chìm
             </span>
             <span class="list-top-movie-item-en">
-             Secret Honeymoon: Assault Train
+             Cop Out
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/if-i-cant-have-love-i-want-power" title="If I Can’t Have Love, I Want Power">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/if-i-cant-have-love-i-want-power-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             If I Can’t Have Love, I Want Power
+            </span>
+            <span class="list-top-movie-item-en">
+             If I Can't Have Love, I Want Power
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thiet-thien-thu-tuong-quan-khong-dau" title="Thiết Thiên Thư: Tướng Quân Không Đầu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thiet-thien-thu-tuong-quan-khong-dau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiết Thiên Thư: Tướng Quân Không Đầu
+            </span>
+            <span class="list-top-movie-item-en">
+             Headless general
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1811,18 +1855,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-la-so-4" title="Tôi Là Số 4">
+          <a class="list-top-movie-link" href="/phim-moi/thuc-don-bi-an" title="Thực Đơn Bí Ẩn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-la-so-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-don-bi-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi Là Số 4
+             Thực Đơn Bí Ẩn
             </span>
             <span class="list-top-movie-item-en">
-             I Am Number Four
+             The Menu
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1833,62 +1877,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-nu-anh-hung-ra-tran" title="Hội Nữ Anh Hùng Ra Trận">
+          <a class="list-top-movie-link" href="/phim-moi/flora-ulysses" title="Flora &amp; Ulysses">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-nu-anh-hung-ra-tran-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/flora-ulysses-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hội Nữ Anh Hùng Ra Trận
+             Flora &amp; Ulysses
             </span>
             <span class="list-top-movie-item-en">
-             Yuki Yuna is A Hero: The Hero Chapter
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tuong-tay-quy-an" title="Tương Tây Quỷ Án">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuong-tay-quy-an-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tương Tây Quỷ Án
-            </span>
-            <span class="list-top-movie-item-en">
-             Strange things in Western Hunan
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tu-dien-phong-the" title="Từ Điển Phòng The">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-dien-phong-the-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Từ Điển Phòng The
-            </span>
-            <span class="list-top-movie-item-en">
-             The Sleeping Dictionary
+             Flora &amp; Ulysses
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
